GE-2 Add Metamask support

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/wildland.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Governance Game</title>
+    <title>Hexagon</title>
   </head>
   <body>
     <div id="root"></div>
