OCT-422: add swagger and asyncAPI docs

--- a/backend/websocket_test/index.html
+++ b/backend/websocket_test/index.html
@@ -89,7 +89,7 @@
       if(proposalInputs[i].value && amountInputs[i].value) {
         allocations.push({
           proposalAddress: proposalInputs[i].value,
-          amount: parseInt(amountInputs[i].value)
+          amount: amountInputs[i].value
         });
       }
     }
