OCT-448: Read ETH proceeds

--- a/backend/websocket_test/index.html
+++ b/backend/websocket_test/index.html
@@ -97,7 +97,7 @@
     const domain = {
       name: "Octant",
       version: "1.0.0",
-      chainId: 5,
+      chainId: 11155111,
     };
 
     const types = {
