OCT-512 OpenGraph tags

--- a/client/index.html
+++ b/client/index.html
@@ -72,7 +72,12 @@
     <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
     <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
-
+    <!-- OG meta -->
+    <meta property="og:title" content="Octant App" />
+    <meta property="og:site_name" content="Octant App" />
+    <meta property="og:url" content="https://octant.app" />
+    <meta property="og:image" content="/governance/octant/images/og-image.png" />
+    <meta property="og:type" content="website" />
     <title>Octant</title>
   </head>
   <body>
