OCT-816: fix allocations

--- a/backend/test_html/websocket.html
+++ b/backend/test_html/websocket.html
@@ -118,7 +118,7 @@
 
     const types = {
       Allocation: [
-        { name: "proposalAddress", type: "string" },
+        { name: "proposalAddress", type: "address" },
         { name: "amount", type: "uint256" },
       ],
       AllocationPayload: [
