fix: set relative directory to tree.gif

--- a/client/public/fail.html
+++ b/client/public/fail.html
@@ -135,7 +135,7 @@
   </head>
   <body>
     <div id="root">
-      <img class="tree" src="/tree.gif" />
+      <img class="tree" src="./tree.gif" />
       <div class="text">
         <div class="phrase">Octant is experiencing some issues, please hold tight.</div>
         <div class="phrase">We'll be back up as soon as we can.</div>
