feat: Ackee added

--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async src="https://analytics.golem.foundation/gftracker.js" data-ackee-server="https://analytics.golem.foundation" data-ackee-domain-id="1283b594-f989-493b-8a0b-68917149b43f"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link
